<resources>
    <string name="app_name">QuizApp</string>
    <string name="name_app">Quiz App!</string>
    <string name="card_mainText">Welcome</string>
    <string name="card_secondText">Enter your name</string>
    <string name="card_inputHintText">e.g. Oleh</string>
    <string name="btn_startText">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="questionText">What country does this flag belong to?</string>
    <string name="progressText">0/10</string>
    <string name="option_one">Austria</string>
    <string name="option_two">Germany</string>
    <string name="option_three">Belgium</string>
    <string name="option_four">Denmark</string>
    <string name="question_btnSubmit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score">Your Score is 9 out of 10</string>
    <string name="finish">FINISH</string>
</resources>