<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionsActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/colorCardPrimary"
            tools:text="@string/questionText"/>

        <ImageView
            android:id="@+id/iv_flagImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/quiz_image"
            android:src="@drawable/ic_flag_of_germany"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:indeterminate="false"
                android:minHeight="50dp"
                android:progress="0"/>
            
            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                tools:text="@string/progressText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/question_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorCardSecondary"
            android:textSize="18sp"
            android:text="@string/option_one"/>

        <TextView
            android:id="@+id/question_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorCardSecondary"
            android:textSize="18sp"
            android:text="@string/option_two"/>

        <TextView
            android:id="@+id/question_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorCardSecondary"
            android:textSize="18sp"
            android:text="@string/option_three"/>

        <TextView
            android:id="@+id/question_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorCardSecondary"
            android:textSize="18sp"
            android:text="@string/option_four"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/question_btnSubmit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>